[#2316] Strm/Processor: add, with support

--- a/isx-ce.cabal
+++ b/isx-ce.cabal
@@ -26,6 +26,7 @@ library lib-common-ce
     exposed-modules:
         TPX.Com.Cursor
         TPX.Com.Isoxya.PlugProc
+        TPX.Com.Isoxya.PlugStrm
         TPX.Com.Log
         TPX.Com.Net
         TPX.Com.SQLite.Conn
@@ -74,6 +75,7 @@ library lib-isx-ce-api
         ISX.CE.DB.Migration
         ISX.CE.Msg
         ISX.CE.Proc
+        ISX.CE.Strm
     other-modules:
         Paths_isx_ce
         --
@@ -96,6 +98,7 @@ library lib-isx-ce-api
         ISX.CE.Msg.Query
         ISX.CE.Msg.Types
         ISX.CE.Proc.Processor
+        ISX.CE.Strm.Processor
         ISX.CE.URI
     build-depends:
         lib-common-ce,
