--- a/isx-ce.cabal
+++ b/isx-ce.cabal
@@ -2,7 +2,7 @@ cabal-version:          3.0
 name:                   isx-ce
 version:                0.0.0
 synopsis:               Isoxya CE
-license:                NONE
+license:                BSD-3-Clause
 author:                 Nic Williams <tp@tiredpixel.com>
 maintainer:             Nic Williams <tp@tiredpixel.com>
 build-type:             Simple
