--- a/docker-compose.yml.example
+++ b/docker-compose.yml.example
@@ -2,7 +2,7 @@ version: "2.4"
 services:
   #-----------------------------------------------------------------------------
   api:
-    image: docker.repo.ci.tp-prd.tiredpixel.com/isoxya.build/isoxya-ce:unstable
+    image: docker.io/tiredpixel/isoxya-ce.build:unstable
     init: true
     volumes:
       - ./lib:/home/x/repo/lib
