--- a/docker-compose.yml.example
+++ b/docker-compose.yml.example
@@ -1,27 +1,22 @@
 version: "2.4"
 services:
-  #-----------------------------------------------------------------------------
   api:
-    image: docker.io/tiredpixel/isoxya-ce.build:unstable
+    image: docker.io/tiredpixel/isoxya-api.build:unstable
     init: true
     volumes:
+      - ./isoxya-api.cabal:/home/x/repo/isoxya-api.cabal
       - ./lib:/home/x/repo/lib
+      - ./sqlite3.db:/home/x/repo/sqlite3.db
       - ./src:/home/x/repo/src
       - ./test:/home/x/repo/test
-      #
-      - ./isx-ce.cabal:/home/x/repo/isx-ce.cabal
-      - ./sqlite3.db:/home/x/repo/sqlite3.db
     networks:
-      - ce
-      #
-      - plug
+      - api
+      - plugin
     ports:
       - 0.0.0.0:8000:8000
     restart: on-failure
-  #-----------------------------------------------------------------------------
 networks:
-  ce: {}
-  #
-  plug:
+  api: {}
+  plugin:
     external: true
-    name: isoxya_plug
+    name: isoxya_plugin
