[2479] build: change port 8000 => 80

--- a/pkg/Dockerfile
+++ b/pkg/Dockerfile
@@ -27,8 +27,8 @@ ENV PATH=${HOME}/bin:$PATH \
     LANG=C.UTF-8 \
     LOG_LEVEL=Info
 
-CMD ["isoxya-api", "-b", "0.0.0.0", "-p", "8000"]
+CMD ["isoxya-api", "-b", "0.0.0.0", "-p", "80"]
 
-EXPOSE 8000
+EXPOSE 80
 
-HEALTHCHECK CMD curl -fs http://localhost:8000 || false
+HEALTHCHECK CMD curl -fs http://localhost || false
