[2491] build: split plugin network into processor, streamer

--- a/docker-compose.yml.example
+++ b/docker-compose.yml.example
@@ -10,11 +10,13 @@ services:
       - ./test:/home/x/repo/test
     networks:
       - api
-      - plugin
+      - processor
+      - streamer
     ports:
       - 0.0.0.0:80:80
     restart: on-failure
     env_file: .env
 networks:
   api: {}
-  plugin: {}
+  processor: {}
+  streamer: {}
