--- a/isoxya-api.cabal
+++ b/isoxya-api.cabal
@@ -19,6 +19,7 @@ common common-properties
     ghc-options:
         -Wall
         -Werror
+        -Wunused-packages
 --------------------------------------------------------------------------------
 -- HACK: hspec-snap 1.0.2.0 breaks on Haskell 8.10, base 4.14.3.0
 library hspec-snap
