[2511] build: label images

--- a/pkg/Dockerfile
+++ b/pkg/Dockerfile
@@ -32,3 +32,5 @@ CMD ["isoxya-api", "-b", "0.0.0.0", "-p", "80"]
 EXPOSE 80
 
 HEALTHCHECK CMD curl -fs http://localhost || false
+
+LABEL org.opencontainers.image.source https://github.com/isoxya/isoxya-api
