--- a/misc/streams/unstable/docker-compose.yml
+++ b/misc/streams/unstable/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "2.4"
 services:
   api:
-    image: docker.io/isoxya/isoxya-api:unstable
+    image: ghcr.io/isoxya/isoxya-api:unstable
     init: true
     networks:
       - api
@@ -11,7 +11,7 @@ services:
       - 0.0.0.0:80:80
     restart: on-failure
   plugin_crawler_html:
-    image: docker.io/isoxya/isoxya-plugin-crawler-html:unstable
+    image: ghcr.io/isoxya/isoxya-plugin-crawler-html:unstable
     init: true
     networks:
       processor:
@@ -19,7 +19,7 @@ services:
           - isoxya-plugin-crawler-html.localhost
     restart: on-failure
   plugin_nginx:
-    image: docker.io/isoxya/isoxya-plugin-nginx:latest
+    image: ghcr.io/isoxya/isoxya-plugin-nginx:latest
     networks:
       streamer:
         aliases:
