Revert "[2511] build: repoint to ghcr.io"
This reverts commit f22e61712185ee146b17fc56299a4ee92920af7b.

--- a/misc/streams/testing/docker-compose.yml
+++ b/misc/streams/testing/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "2.4"
 services:
   api:
-    image: ghcr.io/isoxya/isoxya-api:testing
+    image: docker.io/isoxya/isoxya-api:testing
     init: true
     networks:
       - api
@@ -11,7 +11,7 @@ services:
       - 0.0.0.0:80:80
     restart: on-failure
   plugin_crawler_html:
-    image: ghcr.io/isoxya/isoxya-plugin-crawler-html:testing
+    image: docker.io/isoxya/isoxya-plugin-crawler-html:testing
     init: true
     networks:
       processor:
@@ -19,7 +19,7 @@ services:
           - isoxya-plugin-crawler-html.localhost
     restart: on-failure
   plugin_nginx:
-    image: ghcr.io/isoxya/isoxya-plugin-nginx:latest
+    image: docker.io/isoxya/isoxya-plugin-nginx:latest
     networks:
       streamer:
         aliases:
