[2514] build: replace tinylog with monad-logger

--- a/isoxya-api.cabal
+++ b/isoxya-api.cabal
@@ -50,6 +50,7 @@ library lib-common
         http-conduit,
         http-types,
         memory,
+        monad-logger,
         network-uri,
         regex-compat,
         resourcet,
@@ -59,7 +60,6 @@ library lib-common
         snap-server,
         sqlite-simple,
         time,
-        tinylog,
         unix,
         unordered-containers,
         uuid,
