[2515] build: install stylish-haskell; vendor modified config

--- a/isoxya-api.cabal
+++ b/isoxya-api.cabal
@@ -177,9 +177,12 @@ test-suite test-isoxya-api
         lib-common-test,
         lib-isoxya-api,
         snap,
+        stylish-haskell,
     default-extensions:
         NoImplicitPrelude
     hs-source-dirs:
         test
+    ghc-options:
+        -Wno-error=unused-packages
     build-tool-depends:
         hspec-discover:hspec-discover   ==  2.*
