--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     init: true
     volumes:
       - .:/home/x/r
-      - /home/x/r/dist-newstyle
+      - api_dist-newstyle:/home/x/r/dist-newstyle
     networks:
       - api
       - processor
@@ -15,6 +15,8 @@ services:
     ports:
       - 0.0.0.0:80:80
     restart: on-failure
+volumes:
+  api_dist-newstyle: {}
 networks:
   api: {}
   processor: {}
