build: remove volumes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,12 @@ services:
       target: builder
     init: true
     volumes:
-      - .:/home/x/r
-      - api_dist-newstyle:/home/x/r/dist-newstyle
-      - api_sqlite3:/home/x/r/.sqlite3
+      - ./bin:/home/x/r/bin
+      - ./cabal.project.freeze:/home/x/r/cabal.project.freeze
+      - ./isoxya-api.cabal:/home/x/r/isoxya-api.cabal
+      - ./lib:/home/x/r/lib
+      - ./src:/home/x/r/src
+      - ./test:/home/x/r/test
     networks:
       - api
       - processor
@@ -16,11 +19,6 @@ services:
     ports:
       - 0.0.0.0:80:80
     restart: on-failure
-    environment:
-      SQLITE_FILE: .sqlite3/sqlite3.db
-volumes:
-  api_dist-newstyle: {}
-  api_sqlite3: {}
 networks:
   api: {}
   processor: {}
